Added base DatagramSocketBase class in xenDatagramSocketBase.hpp/.cpp.

--- a/libXennet/docs/latex/files.tex
+++ b/libXennet/docs/latex/files.tex
@@ -1,5 +1,7 @@
 \section{File List}
 Here is a list of all files with brief descriptions:\begin{CompactList}
+\item\contentsline{section}{libXennet/src/\hyperlink{xenDatagramSocketBase_8cpp}{xenDatagramSocketBase.cpp} }{\pageref{xenDatagramSocketBase_8cpp}}{}
+\item\contentsline{section}{libXennet/src/\hyperlink{xenDatagramSocketBase_8hpp}{xenDatagramSocketBase.hpp} }{\pageref{xenDatagramSocketBase_8hpp}}{}
 \item\contentsline{section}{libXennet/src/\hyperlink{xenInfo_8cpp}{xenInfo.cpp} }{\pageref{xenInfo_8cpp}}{}
 \item\contentsline{section}{libXennet/src/\hyperlink{xenInfo_8hpp}{xenInfo.hpp} }{\pageref{xenInfo_8hpp}}{}
 \item\contentsline{section}{libXennet/src/\hyperlink{xenMain_8hpp}{xenMain.hpp} }{\pageref{xenMain_8hpp}}{}
