--- a/libXennet/docs/latex/annotated.tex
+++ b/libXennet/docs/latex/annotated.tex
@@ -1,5 +1,6 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions:\begin{CompactList}
+\item\contentsline{section}{\hyperlink{classXennet_1_1DatagramSocketBase}{Xennet::DatagramSocketBase} (\hyperlink{classXennet_1_1DatagramSocketBase}{DatagramSocketBase} is inherited by the OS-specific DatagramSocket class )}{\pageref{classXennet_1_1DatagramSocketBase}}{}
 \item\contentsline{section}{\hyperlink{classXennet_1_1Info}{Xennet::Info} (Library information )}{\pageref{classXennet_1_1Info}}{}
 \item\contentsline{section}{\hyperlink{classXennet_1_1PacketBase}{Xennet::PacketBase} }{\pageref{classXennet_1_1PacketBase}}{}
 \item\contentsline{section}{\hyperlink{classXennet_1_1ServerSocketBase}{Xennet::ServerSocketBase} }{\pageref{classXennet_1_1ServerSocketBase}}{}
