--- a/trunk/libXennet/docs/latex/files.tex
+++ b/trunk/libXennet/docs/latex/files.tex
@@ -12,6 +12,8 @@ Here is a list of all files with brief descriptions:\begin{CompactList}
 \item\contentsline{section}{libXennet/src/\hyperlink{xenSocketAddressBase_8hpp}{xenSocketAddressBase.hpp} }{\pageref{xenSocketAddressBase_8hpp}}{}
 \item\contentsline{section}{libXennet/src/\hyperlink{xenSocketBase_8cpp}{xenSocketBase.cpp} }{\pageref{xenSocketBase_8cpp}}{}
 \item\contentsline{section}{libXennet/src/\hyperlink{xenSocketBase_8hpp}{xenSocketBase.hpp} }{\pageref{xenSocketBase_8hpp}}{}
+\item\contentsline{section}{libXennet/src/linux/\hyperlink{xenDatagramSocket_8cpp}{xenDatagramSocket.cpp} }{\pageref{xenDatagramSocket_8cpp}}{}
+\item\contentsline{section}{libXennet/src/linux/\hyperlink{xenDatagramSocket_8hpp}{xenDatagramSocket.hpp} }{\pageref{xenDatagramSocket_8hpp}}{}
 \item\contentsline{section}{libXennet/src/linux/\hyperlink{xenPacket_8cpp}{xenPacket.cpp} }{\pageref{xenPacket_8cpp}}{}
 \item\contentsline{section}{libXennet/src/linux/\hyperlink{xenPacket_8h}{xenPacket.h} }{\pageref{xenPacket_8h}}{}
 \item\contentsline{section}{libXennet/src/linux/\hyperlink{xenServerSocket_8cpp}{xenServerSocket.cpp} }{\pageref{xenServerSocket_8cpp}}{}
