Added UDP support to XennetClient3

--- a/libXennet/docs/latex/Xennet_8hpp.tex
+++ b/libXennet/docs/latex/Xennet_8hpp.tex
@@ -8,3 +8,4 @@
 {\tt \#include \char`\"{}xenSocketAddressBase.hpp\char`\"{}}\par
 {\tt \#include \char`\"{}xenSocketBase.hpp\char`\"{}}\par
 {\tt \#include \char`\"{}xenServerSocketBase.hpp\char`\"{}}\par
+{\tt \#include \char`\"{}xenDatagramSocketBase.hpp\char`\"{}}\par
